--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+          integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
