--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -22,6 +22,12 @@
       width: 45%;
     }
   }
+
+  &--halfLarge {
+    @media (min-width: 768px) {
+      width: 48%;
+    }
+  }
 }
 
 .container {
