Feat: added blog home and post layout

--- a/_scss/colors.scss
+++ b/_scss/colors.scss
@@ -4,5 +4,6 @@ $yellow-darker: #e3b005;
 $white: #ffffff;
 $grey: #e7e7e7;
 $very-light-grey: #fcfcfc;
+$dark-grey: #808080;
 $black: #000000;
 $dark: #323232;
