--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,23 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
-      {{ content }}
+    <section class="Section">
+      <div class="container">
+          <div class="Post-imageContainer">
+            <img class="Post-image" src="/assets/images/{{ page.image }}" alt="">
+          </div>
+          <div class="Post-container">
+            <div class="Post-titleCard">
+              <a class="yellow-maj yellow-maj--small" href="">Blog</a>
+              <h1>{{ page.title }}</h1>
+              <p class="Post-date">
+                Le {% include date.html %}
+              </p>
+            </div>
+            {{ content }}
+          </div>
+      </div>
+    </section>
 
       {% include footer.html %}
   </body>
