--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -23,6 +23,18 @@
     }
   }
 
+  &--third {
+    @media (min-width: 768px) {
+      width: 31%;
+    }
+  }
+
+  &--quarter {
+    @media (min-width: 768px) {
+      width: 23%;
+    }
+  }
+
   &--halfLarge {
     @media (min-width: 768px) {
       width: 48%;
