--- a/_scss/typo.scss
+++ b/_scss/typo.scss
@@ -8,6 +8,12 @@
   @media (min-width: 768px) {
     font-size: 1.2rem;
   }
+
+  &--small {
+    @media (min-width: 768px) {
+      font-size: 1rem;
+    }
+  }
 }
 
 .highlight {
