--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11,5 +11,7 @@
 @import 'button';
 @import 'section';
 @import 'card_skill';
+@import 'navbar';
 @import 'footer';
 @import 'post';
+@import 'card_blog';
