--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
+    {% include navbar_blog.html %}
     <section class="Section">
       <div class="container">
           <div class="Post-imageContainer">
@@ -21,10 +22,12 @@
               <a class="yellow-maj yellow-maj--small" href="">Blog</a>
               <h1>{{ page.title }}</h1>
               <p class="Post-date">
-                Le {% include date.html %}
+                Le {% include date.html date=page.date %}
               </p>
             </div>
-            {{ content }}
+            <div class="Post-content">
+              {{ content }}
+            </div>
           </div>
       </div>
     </section>
