--- a/_scss/button.scss
+++ b/_scss/button.scss
@@ -9,6 +9,17 @@
   margin-top: 1rem;
   margin-bottom: 2rem;
 
+  &--small {
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
   @media (min-width: 768px) {
     display: inline-block;
     width: auto;
