--- a/_scss/typo.scss
+++ b/_scss/typo.scss
@@ -23,3 +23,16 @@
 .centered {
   text-align: center;
 }
+
+.normal {
+  font-weight: normal;
+}
+
+.big {
+  font-size: 2rem;
+}
+
+
+.blue {
+  color: $blue;
+}
