--- a/_scss/card.scss
+++ b/_scss/card.scss
@@ -1,12 +1,18 @@
-.CardBlog {
+.Card {
   box-shadow: 0 0 23px 0 rgba(0, 0, 0, 0.1);
   border-bottom: 9px solid $yellow;
   margin-bottom: 3rem;
   position: relative;
   flex: 0 1 100%;
+  background-color: $white;
 
   @media (min-width: 768px) {
     flex: 0 1 48%;
+  }
+
+  &--padding {
+    padding: 1rem 2rem;
+    box-sizing: border-box;
   }
 
   &-image {
@@ -29,5 +35,18 @@
     left: 0;
     height: 100%;
     width: 100%;
+  }
+
+  ul {
+    padding-inline-start: 1rem;
+  }
+
+  li {
+    list-style-type: none;
+    margin-bottom: 1rem;
+  }
+
+  &-icon {
+    color: $yellow;
   }
 }
