--- a/_scss/colors.scss
+++ b/_scss/colors.scss
@@ -1,8 +1,10 @@
 $blue: #06495c;
+$blue-lighter: #086782;
 $yellow: #fece2e;
 $yellow-darker: #e3b005;
 $white: #ffffff;
 $grey: #e7e7e7;
+$grey-lighter: #F7F2F2;
 $very-light-grey: #fcfcfc;
 $dark-grey: #808080;
 $black: #000000;
