--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -29,6 +29,12 @@
     }
   }
 
+  &--twoThird {
+    @media (min-width: 768px) {
+      width: 62%;
+    }
+  }
+
   &--quarter {
     @media (min-width: 768px) {
       width: 23%;
@@ -39,6 +45,12 @@
     @media (min-width: 768px) {
       width: 48%;
     }
+  }
+
+  &--centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
