--- a/_scss/home.scss
+++ b/_scss/home.scss
@@ -28,16 +28,20 @@
     font-size: 2rem;
 
     @media (min-width: 768px) {
-      font-size: 3.3rem;
+      font-size: 2.2rem;
+    }
+
+    @media (min-width: 960px) {
+      font-size: 2.6rem;
     }
   }
 
   &-subtitle {
     font-size: 1.2rem;
+    color: $dark;
 
-    @media (min-width: 768px) {
-      font-size: 1.6rem;
-      color: $dark;
+    @media (min-width: 960px) {
+      font-size: 1.4rem;
     }
 
     &--noMarginTop {
