--- a/_scss/section.scss
+++ b/_scss/section.scss
@@ -15,6 +15,17 @@
     color: $white;
   }
 
+  &--withBackground {
+    background-image: url("/assets/images/blob-shape.svg");
+    background-size: 150%;
+    background-position: -200px -500px;
+    background-repeat: no-repeat;
+
+    @media (min-width: 960px) {
+      background-size: cover;
+    }
+  }
+
   &-firstBloc {
     margin-top: 4rem;
     margin-bottom: 2rem;
