--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -10,8 +10,7 @@
 @import 'home';
 @import 'button';
 @import 'section';
-@import 'card_skill';
 @import 'navbar';
 @import 'footer';
 @import 'post';
-@import 'card_blog';
+@import 'card';
