Feat: added contact form

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,9 @@
 <nav>
   <div class="container Navbar">
     <div class="Navbar-logo">
-      <a href="/" class="Navbar-link">HOGO Avocats</a>
+      <a href="/" class="Navbar-link">
+        <img src="/assets/images/logo-hogo-avocats.svg" alt="" class="Home-image--medium">
+      </a>
     </div>
 
     <div class="Navbar-links">
