--- a/_scss/section.scss
+++ b/_scss/section.scss
@@ -1,6 +1,10 @@
 .Section {
 
-  padding: 4rem 0;
+  padding: 2rem 0;
+
+  @media (min-width: 768px) {
+    padding: 4rem 0;
+  }
 
   &--noPaddingBottom {
     padding-top: 4rem;
