--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
           </div>
           <div class="Post-container">
             <div class="Post-titleCard">
-              <a class="yellow-maj yellow-maj--small" href="">Blog</a>
+              <a class="yellow-maj yellow-maj--small" href="/blog">Blog</a>
               <h1>{{ page.title }}</h1>
               <p class="Post-date">
                 Le {% include date.html date=page.date %}
