--- a/_scss/colors.scss
+++ b/_scss/colors.scss
@@ -2,6 +2,7 @@ $blue: #06495c;
 $blue-lighter: #086782;
 $yellow: #fece2e;
 $yellow-darker: #e3b005;
+$yellow-lighter: #FFD959;
 $white: #ffffff;
 $grey: #e7e7e7;
 $grey-lighter: #F7F2F2;
