--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -73,6 +73,17 @@
   }
 }
 
+.small-container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media (min-width: 768px) {
+    width: 750px;
+  }
+}
+
 .Cards {
   display: flex;
   flex-wrap: wrap;
