--- a/_scss/navbar.scss
+++ b/_scss/navbar.scss
@@ -12,7 +12,7 @@
   &-link {
     margin-right: 2rem;
     font-weight: bold;
-    color: $black;
+    color: $dark;
     transition: all 0.3s ease;
 
     &:hover {
