Feat: added social links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,8 +18,12 @@
         </div>
         <div class="Col Col--third">
           <div class="Footer-icons">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-linkedin-in Footer-lastIcon"></i>
+            <a href="https://twitter.com/ColySofiane" target="_blank">
+              <i class="fab fa-twitter "></i>
+            </a>
+            <a href="https://www.linkedin.com/company/hogo-avocats/" target="_blank">
+              <i class="fab fa-linkedin-in Footer-lastIcon"></i>
+            </a>
           </div>
         </div>
       </div>
