--- a/_scss/footer.scss
+++ b/_scss/footer.scss
@@ -4,6 +4,15 @@
     font-size: 2.5rem;
     display: flex;
     justify-content: flex-end;
+
+    a {
+      color: $white;
+      opacity: 0.8;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 
   &-lastIcon {
