Feat: added legal mentions page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
-<footer>
+<footer class="Footer">
   <div class="Section Section--blue">
     <div class="container">
       <div class="Row">
         <div class="Col Col--third Footer-address">
-          <p>Société HOGO Avocats </p>
+          <p><strong>Société HOGO Avocats </strong></p>
           <address>
             103 avenue Maréchal de Saxe<br>
             69003 LYON
@@ -11,7 +11,7 @@
         </div>
         <div class="Col Col--third Footer-legal">
           <ul>
-            <li>Mentions légales</li>
+            <li><a href="/mentions-legales" class="Footer-link">Mentions légales</a></li>
             <li>Tous droits réservés</li>
             <li>Copyright 2019</li>
           </ul>
