--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,12 @@
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
           crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <meta name="description" content="{% if page.meta-desc %}{{ page.meta-desc | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.meta-desc }}{% endif %}">
+    <meta name="title" content="{% if page.title %}{{ page.title | truncate: 45 | append: ' - HOGO Avocats'}}{% else %}{{ site.title }}{% endif %}">
   </head>
   <body>
 
