--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,10 @@
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
           crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+
+    <meta name="description" content="{% if page.meta-desc %}{{ page.meta-desc | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    <meta name="title" content="{% if page.title %}{{ page.title | truncate: 45 | append: ' - HOGO Avocats'}}{% else %}{{ site.title }}{% endif %}">
   </head>
   <body>
     {% include navbar_blog.html %}
