--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,10 @@
 <nav>
   <div class="container Navbar">
-    <div class="Navbar-logo">
-      <a href="/" class="Navbar-link">
-        <img src="/assets/images/logo-hogo-avocats.svg" alt="" class="Home-image--medium">
-      </a>
-    </div>
+    <a href="/" class="Navbar-link">
+      <img src="/assets/images/logo-hogo-avocats.svg"
+           alt="Logo HOGO Avocats"
+           class="Navbar-logo">
+    </a>
 
     <div class="Navbar-links">
       <a href="/blog" class="Navbar-link">Blog</a>
