--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav>
+<header>
   <div class="container Navbar">
     <a href="/" class="Navbar-link">
       <img src="/assets/images/logo-hogo-avocats.svg"
@@ -6,8 +6,11 @@
            class="Navbar-logo">
     </a>
 
-    <div class="Navbar-links">
+    <nav class="Navbar-links">
       <a href="/blog" class="Navbar-link">Blog</a>
-    </div>
+      <button type="button" class="Navbar-buttons Navbar-close"><i class="fas fa-times"></i></button>
+    </nav>
+
+    <button type="button" class="Navbar-buttons Navbar-hamburger"><i class="fas fa-bars"></i></button>
   </div>
-</nav>
+</header>
