--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,11 @@
     <meta name="title" content="{% if page.title %}{{ page.title | truncate: 45 | append: ' - HOGO Avocats'}}{% else %}{{ site.title }}{% endif %}">
   </head>
   <body>
-
+    
     {{ content }}
 
     {% include footer.html %}
+
+    <script src="/assets/js/Navbar.js"></script>
   </body>
 </html>
