--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,8 @@
 
     <meta name="description" content="{% if page.meta-desc %}{{ page.meta-desc | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta name="title" content="{% if page.title %}{{ page.title | truncate: 45 | append: ' - HOGO Avocats'}}{% else %}{{ site.title }}{% endif %}">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
     {% include navbar_blog.html %}
@@ -38,6 +40,7 @@
       </div>
     </section>
 
-      {% include footer.html %}
+    {% include footer.html %}
+    <script src="/assets/js/Navbar.js"></script>
   </body>
 </html>
