--- a/_scss/navbar.scss
+++ b/_scss/navbar.scss
@@ -3,6 +3,11 @@
   justify-content: space-between;
   padding-top: 2rem;
   align-items: center;
+  margin-bottom: 3rem;
+
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+  }
 
   &-logo {
     height: 30px;
@@ -15,8 +20,33 @@
   }
 
   &-links {
-    display: flex;
-    align-items: baseline;
+
+    @media (max-width: 768px) {
+      position: fixed;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 10;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: 100%;
+      margin: 0px;
+      overflow: hidden;
+      padding-top: 8rem;
+      transition: all 0.3s cubic-bezier(0.41, 0.094, 0.54, 0.07) 0s;
+      transform: translateX(-100%);
+      background-color: $white;
+    }
+
+    &--open {
+      transform: translateX(0);
+    }
+
+    @media (min-width: 768px) {
+      display: flex;
+      align-items: baseline;
+    }
   }
 
   &-link {
@@ -24,6 +54,11 @@
     font-weight: bold;
     color: $dark;
     transition: all 0.3s ease;
+    font-size: 1.5rem;
+
+    @media (min-width: 768px) {
+      font-size: 1rem;
+    }
 
     &:hover {
       color: $yellow-darker;
@@ -35,6 +70,35 @@
       &:hover {
         color: $yellow;
       }
+    }
+  }
+
+  &-logo {
+    z-index: 20;
+  }
+
+  &-buttons {
+    border: none;
+    background-color: inherit;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+
+  &-close {
+    z-index: 20;
+    position: absolute;
+    top: 2rem;
+    right: 1rem;
+  }
+
+  &-cta {
+    margin-top: 2rem;
+  }
+
+  @media (min-width: 768px) {
+
+    .Navbar-close, .Navbar-hamburger {
+      display: none;
     }
   }
 }
