Feat: added infographics section

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,6 +8,7 @@
 
     <nav class="Navbar-links">
       <a href="/blog" class="Navbar-link">Blog</a>
+      <a href="/infographies" class="Navbar-link">Infographies</a>
       <button type="button" class="Navbar-buttons Navbar-close"><i class="fas fa-times"></i></button>
     </nav>
 
