--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -89,3 +89,9 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.image-centered {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
