Fix: changed path to images for infographics

--- a/_layouts/infographic.html
+++ b/_layouts/infographic.html
@@ -32,7 +32,7 @@
           </p>
         </div>
       </div>
-      <img src="/assets/images/{{ page.image }}" alt="{{ page.alt-tag }}" class="image-centered">
+      <img src="{{ page.image }}" alt="{{ page.alt-tag }}" class="image-centered">
     </section>
 
     {% include footer.html %}
