--- a/_layouts/infographic.html
+++ b/_layouts/infographic.html
@@ -22,17 +22,19 @@
 
     {% include navbar_blog.html %}
 
-    <section class="Section container">
-      <div class="Section-firstBloc">
-        <div class="Post-titleCard">
-          <a class="yellow-maj yellow-maj--small centered" href="/infographies">Nos infographies</a>
-          <h1>{{ page.title }}</h1>
-          <p class="Post-date">
-            Le {% include date.html date=page.date %}
-          </p>
+    <section class="Section Section--gradient">
+      <div class="container">
+        <div class="Section-firstBloc">
+          <div class="Post-titleCard">
+            <a class="yellow-maj yellow-maj--small centered" href="/infographies">Nos infographies</a>
+            <h1 class="Card-title">{{ page.title }}</h1>
+            <p class="Post-date">
+              Le {% include date.html date=page.date %}
+            </p>
+          </div>
         </div>
+        <img src="/assets/images/{{ page.image }}" alt="{{ page.alt-tag }}" class="image-centered">
       </div>
-      <img src="{{ page.image }}" alt="{{ page.alt-tag }}" class="image-centered">
     </section>
 
     {% include footer.html %}
