--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@
           <div class="Post-container">
             <div class="Post-titleCard">
               <a class="yellow-maj yellow-maj--small" href="/blog">Blog</a>
-              <h1>{{ page.title }}</h1>
+              <h1 class="Card-title">{{ page.title }}</h1>
               <p class="Post-date">
                 Le {% include date.html date=page.date %}
               </p>
