--- a/_scss/card.scss
+++ b/_scss/card.scss
@@ -13,6 +13,10 @@
     border-bottom: 9px solid $blue;
   }
 
+  &--hidden {
+    display: none;
+  }
+
   @media (min-width: 768px) {
     flex: 0 1 48%;
     margin-bottom: 3rem;
@@ -27,6 +31,15 @@
     height: 200px;
     width: 100%;
     background-size: cover;
+  }
+
+  &-title {
+    font-size: 1.2rem;
+
+    @media (min-width: 768px) {
+      font-size: 1.5rem;
+    }
+
   }
 
   &-content {
