--- a/_scss/navbar.scss
+++ b/_scss/navbar.scss
@@ -56,9 +56,11 @@
     color: $dark;
     transition: all 0.3s ease;
     font-size: 1.5rem;
+    margin-top: 2rem;
 
     @media (min-width: 768px) {
       font-size: 1rem;
+      margin-top: 0;
     }
 
     &:hover {
