--- a/_layouts/infographic.html
+++ b/_layouts/infographic.html
@@ -33,7 +33,7 @@
             </p>
           </div>
         </div>
-        <img src="/assets/images/{{ page.image }}" alt="{{ page.alt-tag }}" class="image-centered">
+        <img src="{{ page.image }}" alt="{{ page.alt-tag }}" class="image-centered">
       </div>
     </section>
 
