--- a/_includes/navbar_blog.html
+++ b/_includes/navbar_blog.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container Navbar">
-    <a href="/" class="Navbar-link">
+    <a href="/">
       <img src="/assets/images/logo-hogo-avocats.svg"
            alt="Logo HOGO Avocats"
            class="Navbar-logo">
