Fix: changed path to blog images

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
     <section class="Section">
       <div class="container">
           <div class="Post-imageContainer">
-            <img class="Post-image" src="/assets/images/{{ page.image }}" alt="">
+            <img class="Post-image" src="{{ page.image }}" alt="">
           </div>
           <div class="Post-container">
             <div class="Post-titleCard">
