--- a/_scss/typo.scss
+++ b/_scss/typo.scss
@@ -17,9 +17,8 @@
 }
 
 .highlight {
-  background-color: $blue;
+  background-color: $yellow;
   white-space: nowrap;
-  color: $white;
 }
 
 .centered {
