Fix: add publication date different from date used in post file's name

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@
               <a class="yellow-maj yellow-maj--small" href="/blog">Blog</a>
               <h1 class="Card-title">{{ page.title }}</h1>
               <p class="Post-date">
-                Le {% include date.html date=page.date %}
+                Le {% include date.html date=page.publication-date %}
               </p>
             </div>
             <div class="Post-content">
