feature: new page for publication

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,6 +7,7 @@
     </a>
 
     <nav class="Navbar-links">
+      <a href="/ouvrage" class="Navbar-link">Ouvrage</a>
       <a href="/blog" class="Navbar-link">Blog</a>
       <a href="/infographies" class="Navbar-link">Infographies</a>
       <button type="button" class="Navbar-buttons Navbar-close"><i class="fas fa-times"></i></button>
