--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -1,3 +1,19 @@
+.Base {
+
+  &-subtitle {
+    font-size: 1.2rem;
+    color: $dark;
+
+    @media (min-width: 960px) {
+      font-size: 1.4rem;
+    }
+
+    &--noMarginTop {
+      margin-top: 0;
+    }
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
