--- a/_scss/button.scss
+++ b/_scss/button.scss
@@ -55,4 +55,30 @@
       background-color: $yellow-lighter;
     }
   }
+
+  &--lightYellow {
+    background-color: $yellow-lighter;
+    height: 3.5rem;
+    width: 100%;
+    transition: all 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+    border-radius: 0;
+    font-size: 1.25rem;
+    font-weight: bold;
+
+    &:hover {
+      box-shadow: 2px 4px 5px 2px rgba(0, 0, 0, 0.1);
+      transform: scale(1.05);
+      transition-duration: 300ms;
+    }
+
+    @media(min-width: 768px) {
+      max-width: 22.5rem;
+      margin-top: 4rem;
+      margin: 4rem auto;
+    }
+  }
 }
