Fix: add link on banner

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
-<a href="#" class="Banner">
+<a href="/ouvrage" class="Banner">
   <p class="Banner-smallText">Besoin de comprendre le droit du travail ?</p>
   <div class="Banner-content">
     <p class="Banner-text Banner-text--light">Découvrez</p>
