Fix: add banner on blog page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
+    {% include banner.html %}
     {% include navbar_blog.html %}
     <section class="Section">
       <div class="container">
