--- a/_layouts/infographic.html
+++ b/_layouts/infographic.html
@@ -20,6 +20,7 @@
   </head>
   <body>
 
+    {% include banner.html %}
     {% include navbar_blog.html %}
 
     <section class="Section Section--gradient">
