Fix: changed address in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
         <div class="Col Col--third Footer-address">
           <p><strong>Société HOGO Avocats </strong></p>
           <address>
-            103 avenue Maréchal de Saxe<br>
-            69003 LYON
+            27 rue Jacques-Louis Hénon<br>
+            69004 LYON
           </address>
         </div>
         <div class="Col Col--third Footer-legal">
